# api/swagger/swagger.yaml
@@ -18,22 +18,6 @@ consumes:
 produces:
   - application/json
 paths:
-  /check:
-    x-swagger-router-controller: businessModelCanvas
-    get:
-      security:
-        - Bearer: []
-      description: test
-      operationId: check
-      responses:
-        "200":
-          description: Success
-          schema:
-            $ref: "#/definitions/Check"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/ErrorResponse"
   /businessModelCanvas:
     x-swagger-router-controller: businessModelCanvas
     post:
@@ -87,22 +71,168 @@ paths:
     x-swagger-pipe: swagger_raw
 
 definitions:
-  Check:
-    type: string
   BusinessModelCanvas:
     properties:
       id:
         type: string
       name:
         type: string
-      customerSegments:
+      description:
+        type: string
+      status:
+        type: string
+      owner:
+        type: string
+      created:
+        type: string
+      modified:
+        type: number
+      private:
+        type: number
+      keyPartner:
+        type: array
+        items:
+          $ref: "#/definitions/KeyPartner"
+      keyAcitivity:
+        type: array
+        items:
+          $ref: "#/definitions/KeyActivity"
+      keyResource:
+        type: array
+        items:
+          $ref: "#/definitions/KeyResource"
+      valueProposition:
+        type: array
+        items:
+          $ref: "#/definitions/ValueProposition"
+      customerRelationship:
+        type: array
+        items:
+          $ref: "#/definitions/CustomerRelationship"
+      customerSegment:
         type: array
         items:
           $ref: "#/definitions/CustomerSegment"
+      channel:
+        type: array
+        items:
+          $ref: "#/definitions/Channel"
+      costStructure:
+        type: array
+        items:
+          $ref: "#/definitions/CostStructure"
+      revenueStream:
+        type: array
+        items:
+          $ref: "#/definitions/RevenueStream"
+  KeyPartner:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
+  KeyActivity:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
+  KeyResource:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
+  ValueProposition:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
+  CustomerRelationship:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
+  Channel:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
   CustomerSegment:
     properties:
       id:
         type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
+  CostStructure:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
+  RevenueStream:
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      description:
+        type: string
+      type:
+        type: array
+        items:
+          type: string
   ErrorResponse:
     required:
       - message
